Agregar boton Play y Pausa en videos

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper-slide--one" id="slide-1">
-            <video id="video-1">
+            <div class="btn-play-background">
+              <img id="btn-slide-1" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="btn-pause-background">
+              <img id="btn-pause-1" src="./img/ico-pausa.png" alt="Pausar Video">
+            </div>
+            <video id="video-1" fullscreen>
               <source src="./videos/video-1.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -87,6 +93,12 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--two" id="slide-2">
+            <div class="btn-play-background">
+              <img id="btn-slide-2" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="btn-pause-background">
+              <img id="btn-pause-2" src="./img/ico-pausa.png" alt="Pausar Video">
+            </div>
             <video id="video-2">
               <source src="./videos/video-2.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -96,6 +108,12 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--three" id="slide-3">
+            <div class="btn-play-background">
+              <img id="btn-slide-3" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="btn-pause-background">
+              <img id="btn-pause-3" src="./img/ico-pausa.png" alt="Pausar Video">
+            </div>
             <video id="video-3">
               <source src="./videos/video-3.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
@@ -105,6 +123,12 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--four" id="slide-4">
+            <div class="btn-play-background">
+              <img id="btn-slide-4" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="btn-pause-background">
+              <img id="btn-pause-4" src="./img/ico-pausa.png" alt="Pausar Video">
+            </div>
             <video id="video-4">
               <source src="./videos/video-4.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
