agregar Spinner Cargando...

--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
       <div class="swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide swiper-slide--one" id="slide-1">
-            <div class="btn-play-background">
+            <div class="btn-play-background display-btn-play-1">
               <img id="btn-slide-1" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="container-loading-1">
+              <div class="spinner"></div>
             </div>
             <div class="btn-pause-background">
               <img id="btn-pause-1" src="./img/ico-pausa.png" alt="Pausar Video">
             </div>
-            <video id="video-1" fullscreen>
+            <video id="video-1" disablefullscreen loop>
               <source src="./videos/video-1.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -93,13 +96,16 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--two" id="slide-2">
-            <div class="btn-play-background">
+            <div class="btn-play-background display-btn-play-2">
               <img id="btn-slide-2" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="container-loading-2">
+              <div class="spinner"></div>
             </div>
             <div class="btn-pause-background">
               <img id="btn-pause-2" src="./img/ico-pausa.png" alt="Pausar Video">
             </div>
-            <video id="video-2">
+            <video id="video-2" disablefullscreen loop>
               <source src="./videos/video-2.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -108,13 +114,16 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--three" id="slide-3">
-            <div class="btn-play-background">
+            <div class="btn-play-background display-btn-play-3">
               <img id="btn-slide-3" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="container-loading-3">
+              <div class="spinner"></div>
             </div>
             <div class="btn-pause-background">
               <img id="btn-pause-3" src="./img/ico-pausa.png" alt="Pausar Video">
             </div>
-            <video id="video-3">
+            <video id="video-3" disablefullscreen loop>
               <source src="./videos/video-3.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
@@ -123,13 +132,16 @@
             </div>
           </div>
           <div class="swiper-slide swiper-slide--four" id="slide-4">
-            <div class="btn-play-background">
+            <div class="btn-play-background display-btn-play-4">
               <img id="btn-slide-4" src="./img/ico-play.png" alt="Play Video">
+            </div>
+            <div class="container-loading-4">
+              <div class="spinner"></div>
             </div>
             <div class="btn-pause-background">
               <img id="btn-pause-4" src="./img/ico-pausa.png" alt="Pausar Video">
             </div>
-            <video id="video-4">
+            <video id="video-4" disablefullscreen loop>
               <source src="./videos/video-4.mp4" type="video/mp4">
               Tu navegador no admite la reproducción de videos.
             </video>
