Agregar textos y corregir imagenes

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         <img src="./img/card-presentacion.jpg" />
         <div>
           <h2>Jorge Oscar Bombicino</h2>
-          <h3>Especialista atletas de alto rendimiento</h3>
+          <h3>Licenciado en terapia física y kinesiología.</h3>
           <p>
-            Nuestra clinica se especializa a tratar a pacientes deportistas bla bla bla
+            Con una trayectoria de más de 35 años trabajando en la rehabilitación y recuperación de deportistas profesionales, de elite y amateur. 
           </p>
           <button class="boton-conocenos-mas">Conocenos mas...</button>
         </div>
@@ -164,49 +164,62 @@
           <div class="card-img-shadow"><img src="./img/servicios-kinesiologia.png" alt="wanda"></div>
           <div class="card-content">
             <h2>Kinesiología</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+            <p>
+              Todos los kinesiologos del staff de ambos centros fueron formados con un mismo protocolo de tratamientos con el fin de alcanzar una pronta vuelta al campo de juego y mejorar su rendimiento deportivo.
+            </p>
           </div>
         </div>
       
         <div class="card-service">
+          <div class="card-img-shadow"><img src="./img/servicios-traumatologia.png" alt="wanda"></div>
+          <div class="card-content">
+            <h2>Traumatología</h2>
+            <p>
+              El equipo de médicos esta conformado por profesionales especializados en deporte y con amplia trayectoria en Clubes de Primera división del Fútbol Argentino, Selección Nacional (AFA), Boxeo, Basquet, entre otros deportes.
+            </p>
+          </div>
+        </div>
+
+        <div class="card-service">
           <div class="card-img-shadow"><img src="./img/servicios-nutricion.png" alt="wanda"></div>
           <div class="card-content">
-            <h2>Nutrición</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
-          </div>
-        </div>
-
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-consultasmedicas.png" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Consultas Medicas</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+            <h2>Nutrición Deportiva</h2>
+            <p>
+              Area cargo de la Lic. Fiorella Bombicino. La nutrición es un pilar fundamental en la práctica deportiva, ya que nos permite optimizar y mejorar el rendimiento, como también acompañar los procesos de recuperación. Trabajamos de forma individual realizando la antropometría y el plan de alimentación de acuerdo a los objetivos.
+            </p>
           </div>
         </div>
 
         <div class="card-service">
           <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
           <div class="card-content">
-            <h2>Entrenamiento Personalizado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+            <h2>Osteopatía y RPG</h2>
+            <p>
+              De la mano de profesionales del staff brindamos el servicio de  Reducacion Postural Global (RPG) y osteopatia, con el objetivo  de lograr un abordaje integral a la patologia del paciente como también trabajar en la prevención de futuras lesiones.
+            </p>
           </div>
         </div>
 
         <div class="card-service">
           <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
           <div class="card-content">
-            <h2>Entrenamiento Personalizado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+            <h2>Programa para deportias profesionales</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?
+            </p>
           </div>
         </div>
 
         <div class="card-service">
           <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
           <div class="card-content">
-            <h2>Entrenamiento Personalizado</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?</p>
+            <h2>Otras Especialidades</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?
+            </p>
           </div>
         </div>
+
     </article>
 	</section>
   <footer class="container-footer"> 
@@ -253,9 +266,10 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
   <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
   <script src="./js/script.js"></script>
+</body>
+</html>
+
   <!--
     Pagina Web Diseñada y construida por Mariano Sy
     Mail: mariano.floresta@hotmail.com
    -->
-</body>
-</html>
