Correccion de tamaño de fuentes de texto

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="card-content">
             <h2>Nutrición Deportiva</h2>
             <p>
-              Area cargo de la Lic. Fiorella Bombicino. La nutrición es un pilar fundamental en la práctica deportiva, ya que nos permite optimizar y mejorar el rendimiento, como también acompañar los procesos de recuperación. Trabajamos de forma individual realizando la antropometría y el plan de alimentación de acuerdo a los objetivos.
+              Area cargo de la Lic. Fiorella Bombicino. El objetivo es optimizar y mejorar el rendimiento deportivo, como también acompañar los procesos de recuperación. Trabajamos realizando educación alimentaria, antropometría y el plan de alimentación personalizado.
             </p>
           </div>
         </div>
