--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <div class="float-wp">
     <i class="fa-brands fa-whatsapp"></i>
     <div class="group-wp-sucursal">
-      <a href="https://api.whatsapp.com/send?phone=+54 1112341234&text=Hola,%20quiero%20solicitar%20un%20turno" target="_blank"><div class="item-sucursal-wp">Sucursal Villa Urquiza</div></a>
-      <a href="https://api.whatsapp.com/send?phone=+54 1143214321&text=Hola,%20quiero%20solicitar%20un%20turno" target="_blank"><div class="item-sucursal-wp">Sucursal Pilar</div></a>
+      <a href="https://api.whatsapp.com/send?phone=+5491173670611&text=Hola,%20quiero%20solicitar%20un%20turno" target="_blank"><div class="item-sucursal-wp">Sucursal Villa Urquiza</div></a>
+      <a href="https://api.whatsapp.com/send?phone=+5491173694173&text=Hola,%20quiero%20solicitar%20un%20turno" target="_blank"><div class="item-sucursal-wp">Sucursal Pilar</div></a>
     </div>
   </div>
   <header class="container-header">
@@ -60,203 +60,208 @@
       </div>
     </nav>
 	</header>
-	<section class="container-section">
-    <article class="container-card-presentacion">
-      <div class="card">
-        <img src="./img/card-presentacion.jpg" />
-        <div>
-          <h2>Jorge Oscar Bombicino</h2>
-          <h3>Licenciado en terapia física y kinesiología.</h3>
-          <p>
-            Con una trayectoria de más de 35 años trabajando en la rehabilitación y recuperación de deportistas profesionales, de elite y amateur. 
-          </p>
-          <button class="boton-conocenos-mas">Conocenos mas...</button>
+  <main>
+    <section class="container-section">
+      <article class="container-card-presentacion">
+        <div class="card">
+          <img src="./img/card-presentacion.jpg" />
+          <div>
+            <h2>Jorge Oscar Bombicino</h2>
+            <h3>Licenciado en terapia física y kinesiología.</h3>
+            <p>
+              Con una trayectoria de más de 35 años trabajando en la rehabilitación y recuperación de deportistas profesionales, de elite y amateur. 
+            </p>
+            <button class="boton-conocenos-mas">Conocenos mas...</button>
+          </div>
+        </div>
+      </article>
+      <div class="container-reload">
+        <p>Actualizar Videos</p>
+        <div class="background-ico-reload" id="btn-reload-videos">
+          <img src="./img/ico-reload.png" alt="Actualizar Videos">
         </div>
       </div>
-    </article>
-    <div class="container-reload">
-      <p>Actualizar Videos</p>
-      <div class="background-ico-reload" id="btn-reload-videos">
-        <img src="./img/ico-reload.png" alt="Actualizar Videos">
-      </div>
-    </div>
-    <article class="container-video-servicios">
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide swiper-slide--one" id="slide-1">
-            <div class="btn-play-background display-btn-play-1">
-              <img id="btn-slide-1" src="./img/ico-play.png" alt="Play Video">
+      <article class="container-video-servicios">
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide swiper-slide--one" id="slide-1">
+              <div class="btn-play-background display-btn-play-1">
+                <img id="btn-slide-1" src="./img/ico-play.png" alt="Play Video">
+              </div>
+              <div class="container-loading-1">
+                <div class="spinner"></div>
+              </div>
+              <div class="btn-pause-background">
+                <img id="btn-pause-1" src="./img/ico-pausa.png" alt="Pausar Video">
+              </div>
+              <video id="video-1" disablefullscreen loop>
+                <source src="./videos/video-1.mp4" type="video/mp4">
+                Tu navegador no admite la reproducción de videos.
+              </video>
+              <div>
+                <h2>Sucursal Pilar</h2>
+              </div>
             </div>
-            <div class="container-loading-1">
-              <div class="spinner"></div>
+            <div class="swiper-slide swiper-slide--two" id="slide-2">
+              <div class="btn-play-background display-btn-play-2">
+                <img id="btn-slide-2" src="./img/ico-play.png" alt="Play Video">
+              </div>
+              <div class="container-loading-2">
+                <div class="spinner"></div>
+              </div>
+              <div class="btn-pause-background">
+                <img id="btn-pause-2" src="./img/ico-pausa.png" alt="Pausar Video">
+              </div>
+              <video id="video-2" disablefullscreen loop>
+                <source src="./videos/video-2.mp4" type="video/mp4">
+                Tu navegador no admite la reproducción de videos.
+              </video>
+              <div>
+                <h2>Sucursal C.A.B.A.</h2>
+              </div>
             </div>
-            <div class="btn-pause-background">
-              <img id="btn-pause-1" src="./img/ico-pausa.png" alt="Pausar Video">
+            <div class="swiper-slide swiper-slide--three" id="slide-3">
+              <div class="btn-play-background display-btn-play-3">
+                <img id="btn-slide-3" src="./img/ico-play.png" alt="Play Video">
+              </div>
+              <div class="container-loading-3">
+                <div class="spinner"></div>
+              </div>
+              <div class="btn-pause-background">
+                <img id="btn-pause-3" src="./img/ico-pausa.png" alt="Pausar Video">
+              </div>
+              <video id="video-3" disablefullscreen loop>
+                <source src="./videos/video-3.mp4" type="video/mp4">
+                Tu navegador no admite la reproducción de videos.
+              </video>
+              <div>
+                <h2>Entrenamiento Grupal</h2>
+              </div>
             </div>
-            <video id="video-1" disablefullscreen loop>
-              <source src="./videos/video-1.mp4" type="video/mp4">
-              Tu navegador no admite la reproducción de videos.
-            </video>
-            <div>
-              <h2>Sucursal Pilar</h2>
-            </div>
-          </div>
-          <div class="swiper-slide swiper-slide--two" id="slide-2">
-            <div class="btn-play-background display-btn-play-2">
-              <img id="btn-slide-2" src="./img/ico-play.png" alt="Play Video">
-            </div>
-            <div class="container-loading-2">
-              <div class="spinner"></div>
-            </div>
-            <div class="btn-pause-background">
-              <img id="btn-pause-2" src="./img/ico-pausa.png" alt="Pausar Video">
-            </div>
-            <video id="video-2" disablefullscreen loop>
-              <source src="./videos/video-2.mp4" type="video/mp4">
-              Tu navegador no admite la reproducción de videos.
-            </video>
-            <div>
-              <h2>Sucursal C.A.B.A.</h2>
-            </div>
-          </div>
-          <div class="swiper-slide swiper-slide--three" id="slide-3">
-            <div class="btn-play-background display-btn-play-3">
-              <img id="btn-slide-3" src="./img/ico-play.png" alt="Play Video">
-            </div>
-            <div class="container-loading-3">
-              <div class="spinner"></div>
-            </div>
-            <div class="btn-pause-background">
-              <img id="btn-pause-3" src="./img/ico-pausa.png" alt="Pausar Video">
-            </div>
-            <video id="video-3" disablefullscreen loop>
-              <source src="./videos/video-3.mp4" type="video/mp4">
-              Tu navegador no admite la reproducción de videos.
-            </video>
-            <div>
-              <h2>Entrenamiento Grupal</h2>
-            </div>
-          </div>
-          <div class="swiper-slide swiper-slide--four" id="slide-4">
-            <div class="btn-play-background display-btn-play-4">
-              <img id="btn-slide-4" src="./img/ico-play.png" alt="Play Video">
-            </div>
-            <div class="container-loading-4">
-              <div class="spinner"></div>
-            </div>
-            <div class="btn-pause-background">
-              <img id="btn-pause-4" src="./img/ico-pausa.png" alt="Pausar Video">
-            </div>
-            <video id="video-4" disablefullscreen loop>
-              <source src="./videos/video-4.mp4" type="video/mp4">
-              Tu navegador no admite la reproducción de videos.
-            </video>
-            <div>
-              <h2>Trabajo en equipo</h2>
+            <div class="swiper-slide swiper-slide--four" id="slide-4">
+              <div class="btn-play-background display-btn-play-4">
+                <img id="btn-slide-4" src="./img/ico-play.png" alt="Play Video">
+              </div>
+              <div class="container-loading-4">
+                <div class="spinner"></div>
+              </div>
+              <div class="btn-pause-background">
+                <img id="btn-pause-4" src="./img/ico-pausa.png" alt="Pausar Video">
+              </div>
+              <video id="video-4" disablefullscreen loop>
+                <source src="./videos/video-4.mp4" type="video/mp4">
+                Tu navegador no admite la reproducción de videos.
+              </video>
+              <div>
+                <h2>Trabajo en equipo</h2>
+              </div>
             </div>
           </div>
+          <div class="swiper-pagination"></div>
         </div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </article>
-    <article class="container-cards-servicios">
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-kinesiologia.png" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Kinesiología</h2>
-            <p>
-              Todos los kinesiologos del staff de ambos centros fueron formados con un mismo protocolo de tratamientos con el fin de alcanzar una pronta vuelta al campo de juego y mejorar su rendimiento deportivo.
-            </p>
+      </article>
+      <article class="container-cards-servicios">
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-kinesiologia.png" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Kinesiología</h2>
+              <p>
+                Todos los kinesiologos del staff de ambos centros fueron formados con un mismo protocolo de tratamientos con el fin de alcanzar una pronta vuelta al campo de juego y mejorar su rendimiento deportivo.
+              </p>
+            </div>
           </div>
-        </div>
-      
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-traumatologia.png" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Traumatología</h2>
-            <p>
-              El equipo de médicos esta conformado por profesionales especializados en deporte y con amplia trayectoria en Clubes de Primera división del Fútbol Argentino, Selección Nacional (AFA), Boxeo, Basquet, entre otros deportes.
-            </p>
+        
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-traumatologia.png" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Traumatología</h2>
+              <p>
+                El equipo de médicos esta conformado por profesionales especializados en deporte y con amplia trayectoria en Clubes de Primera división del Fútbol Argentino, Selección Nacional (AFA), Boxeo, Basquet, entre otros deportes.
+              </p>
+            </div>
           </div>
-        </div>
+  
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-nutricion.png" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Nutrición Deportiva</h2>
+              <p>
+                Area cargo de la Lic. Fiorella Bombicino. El objetivo es optimizar y mejorar el rendimiento deportivo, como también acompañar los procesos de recuperación. Trabajamos realizando educación alimentaria, antropometría y el plan de alimentación personalizado.
+              </p>
+            </div>
+          </div>
+  
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Osteopatía y RPG</h2>
+              <p>
+                De la mano de profesionales del staff brindamos el servicio de  Reducacion Postural Global (RPG) y osteopatia, con el objetivo  de lograr un abordaje integral a la patologia del paciente como también trabajar en la prevención de futuras lesiones.
+              </p>
+            </div>
+          </div>
+  
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-programa-para-deportistas.png" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Programa para deportistas profesionales</h2>
+              <p>
+                A cargo del Lic. Franco Bombicino, el programa incluye desde la rehabilitación, prevención y puesta a punto -off season- realizando trabajo de campo y de consultorio. 
+                Este plan se realiza también de forma internacional ofreciendo al atleta que el profesional viaje al destino donde se encuentra y trabajar desde allí en conjunto.
+              </p>
+            </div>
+          </div>
+  
+          <div class="card-service">
+            <div class="card-img-shadow"><img src="./img/servicios-otras-especialidades.png" alt="wanda"></div>
+            <div class="card-content">
+              <h2>Otras Especialidades</h2>
+              <p>
+                En el centro trabajamos con otras especialidades como: ortopedia, clínica médica, cardiología. 
+                Para lograr un trabajo interdisciplinario total también trabajamos de forma estrecha y con vínculo directo con psicólogos , dermatólogos y especialistas en diagnóstico por imagen.
+              </p>
+            </div>
+          </div>
+  
+      </article>
+    </section>
+  </main>
 
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-nutricion.png" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Nutrición Deportiva</h2>
-            <p>
-              Area cargo de la Lic. Fiorella Bombicino. El objetivo es optimizar y mejorar el rendimiento deportivo, como también acompañar los procesos de recuperación. Trabajamos realizando educación alimentaria, antropometría y el plan de alimentación personalizado.
-            </p>
-          </div>
-        </div>
-
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Osteopatía y RPG</h2>
-            <p>
-              De la mano de profesionales del staff brindamos el servicio de  Reducacion Postural Global (RPG) y osteopatia, con el objetivo  de lograr un abordaje integral a la patologia del paciente como también trabajar en la prevención de futuras lesiones.
-            </p>
-          </div>
-        </div>
-
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Programa para deportias profesionales</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?
-            </p>
-          </div>
-        </div>
-
-        <div class="card-service">
-          <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
-          <div class="card-content">
-            <h2>Otras Especialidades</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rerum consectetur commodi, ducimus ipsam tenetur tempore?
-            </p>
-          </div>
-        </div>
-
-    </article>
-	</section>
   <footer class="container-footer"> 
     <div class="group-sucursales-footer">
       <div class="sucursal-footer">
-        <h3>Villa Urquiza - C.A.B.A.</h3>
+        <h3>Suc. Villa Urquiza - C.A.B.A.</h3>
         <div class="item-footer">
-          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domicilio"></a></div>
           <div class="texto-direccion">
-            <p>Av. De Los Incas 5150 - C1427</p>
+            <p>Av. Los Incas 5150, 5to Piso - C1427</p>
           </div>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
-          <p>011 1234-1234</p>
+          <div class="ico-footer"><a href="tel:+5401145226668"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+          <p>011 4522-6668</p>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
-          <p>scaba@gmail.com</p>
+          <div class="ico-footer"><a href="mailto:tfbombicino@gmail.com"><img src="./img/email.png" alt="Email"></a></div>
+          <p>tfbombicino@gmail.com</p>
         </div>
       </div>
 
       <div class="sucursal-footer">
-        <h3>Pilar - Buenos Aires</h3>
+        <h3>Suc. Pilar - Buenos Aires</h3>
         <div class="item-footer">
-          <div class="ico-footer"><a href="https://goo.gl/maps/uyJ6ZJUCHnYfCskS6" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
+          <div class="ico-footer"><a href="https://maps.app.goo.gl/BvuG9Tg7AVk2VVUj7" target="_blank"><img src="./img/location-ico.png" alt="Domocilio"></a></div>
           <div class="texto-direccion">
-            <p>Av. Moreno 560 - C1520</p>
+            <p>Los Crisantemos 392 - Skyglass 3 Oficinas 103/104</p>
           </div>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><a href="tel:+12341234"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
-          <p>011 4444-5555</p>
+          <div class="ico-footer"><a href="tel:+5401139867300"><img src="./img/phone-ico.png" alt="Telefono"></a></div>   
+          <p>011 3986-7300</p>
         </div>
         <div class="item-footer">
-          <div class="ico-footer"><a href="mailto:correo@example.com"><img src="./img/email.png" alt="Email"></a></div>
-          <p>pilar@gmail.com</p>
+          <div class="ico-footer"><a href="mailto:tfbombicino@gmail.com"><img src="./img/email.png" alt="Email"></a></div>
+          <p>tfbombicino@gmail.com</p>
         </div>
       </div>
     </div> 
