Actualizacion texto y mejoras de interfaz

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div>
   
           <div class="card-service">
-            <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
+            <div class="card-img-shadow"><img src="./img/rpg-osteo.jpg" alt="wanda"></div>
             <div class="card-content">
               <h2>Osteopatía y RPG</h2>
               <p>
@@ -202,7 +202,7 @@
           </div>
   
           <div class="card-service">
-            <div class="card-img-shadow"><img src="./img/servicios-programa-para-deportistas.png" alt="wanda"></div>
+            <div class="card-img-shadow"><img src="./img/servicios-entrenamientoPersonalizado.JPG" alt="wanda"></div>
             <div class="card-content">
               <h2>Programa para deportistas profesionales</h2>
               <p>
