Correcion de tipeo de texto

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="card-content">
               <h2>Nutrición Deportiva</h2>
               <p>
-                Area cargo de la Lic. Fiorella Bombicino. El objetivo es optimizar y mejorar el rendimiento deportivo, como también acompañar los procesos de recuperación. Trabajamos realizando educación alimentaria, antropometría y el plan de alimentación personalizado.
+                Area a cargo de la Lic. Fiorella Bombicino. El objetivo es optimizar y mejorar el rendimiento deportivo, como también acompañar los procesos de recuperación. Trabajamos realizando educación alimentaria, antropometría y el plan de alimentación personalizado.
               </p>
             </div>
           </div>
